@@ -1,5 +1,7 @@
 package org.openelisglobal.result.controller;
 
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.validation.Valid;
 import java.lang.reflect.InvocationTargetException;
 import java.sql.Date;
 import java.util.ArrayList;
@@ -8,14 +10,11 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-
-import javax.annotation.PostConstruct;
-import javax.servlet.http.HttpServletRequest;
-import javax.validation.Valid;
-
+import java.util.stream.Collectors;
 import org.apache.commons.validator.GenericValidator;
 import org.openelisglobal.analysis.service.AnalysisService;
 import org.openelisglobal.analysis.valueholder.Analysis;
+import org.openelisglobal.analyzer.service.BidirectionalAnalyzer;
 import org.openelisglobal.analyzerimport.util.AnalyzerTestNameCache;
 import org.openelisglobal.analyzerimport.util.MappedTestName;
 import org.openelisglobal.analyzerresults.action.AnalyzerResultsPaging;
@@ -29,6 +28,7 @@ import org.openelisglobal.common.formfields.FormFields.Field;
 import org.openelisglobal.common.log.LogEvent;
 import org.openelisglobal.common.paging.PagingBean.Paging;
 import org.openelisglobal.common.services.IStatusService;
+import org.openelisglobal.common.services.PluginAnalyzerService;
 import org.openelisglobal.common.services.PluginMenuService;
 import org.openelisglobal.common.services.QAService;
 import org.openelisglobal.common.services.QAService.QAObservationType;
@@ -39,6 +39,7 @@ import org.openelisglobal.common.services.StatusService.SampleStatus;
 import org.openelisglobal.common.services.StatusSet;
 import org.openelisglobal.common.util.ConfigurationProperties;
 import org.openelisglobal.common.util.DateUtil;
+import org.openelisglobal.common.util.StringUtil;
 import org.openelisglobal.dictionary.service.DictionaryService;
 import org.openelisglobal.dictionary.valueholder.Dictionary;
 import org.openelisglobal.internationalization.MessageUtil;
@@ -48,6 +49,7 @@ import org.openelisglobal.note.service.NoteServiceImpl;
 import org.openelisglobal.note.valueholder.Note;
 import org.openelisglobal.patient.util.PatientUtil;
 import org.openelisglobal.patient.valueholder.Patient;
+import org.openelisglobal.plugin.AnalyzerImporterPlugin;
 import org.openelisglobal.result.action.util.ResultUtil;
 import org.openelisglobal.result.form.AnalyzerResultsForm;
 import org.openelisglobal.result.service.ResultService;
@@ -78,6 +80,7 @@ import org.openelisglobal.typeofsample.valueholder.TypeOfSampleTest;
 import org.openelisglobal.typeoftestresult.service.TypeOfTestResultServiceImpl;
 import org.owasp.encoder.Encode;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Controller;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.Errors;
@@ -85,8 +88,11 @@ import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.WebDataBinder;
 import org.springframework.web.bind.annotation.InitBinder;
 import org.springframework.web.bind.annotation.ModelAttribute;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.servlet.ModelAndView;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
@@ -103,7 +109,6 @@ public class AnalyzerResultsController extends BaseController {
             .isPropertyValueEqual(ConfigurationProperties.Property.configurationName, "CI_GENERAL");
     private static final String REJECT_VALUE = "XXXX";
     private String RESULT_SUBJECT = "Analyzer Result Note";
-    private String DBS_SAMPLE_TYPE_ID;
 
     @InitBinder
     public void initBinder(WebDataBinder binder) {
@@ -118,8 +123,6 @@ public class AnalyzerResultsController extends BaseController {
     private TestService testService;
     @Autowired
     private TypeOfSampleTestService typeOfSampleTestService;
-    @Autowired
-    private TypeOfSampleService typeOfSampleService;
     @Autowired
     private AnalyzerResultsService analyzerResultsService;
     @Autowired
@@ -142,13 +145,20 @@ public class AnalyzerResultsController extends BaseController {
     private LocalizationService localizationService;
     @Autowired
     private NoteService noteService;
+    @Autowired
+    private PluginAnalyzerService pluginAnalyzerService;
+
+    // used in constructor, so use constructor injection
+    private TypeOfSampleService typeOfSampleService;
 
     private TestReflexUtil reflexUtil = new TestReflexUtil();
 
     private Map<String, String> analyzerNameToSubtitleKey = new HashMap<>();
+    private final String DBS_SAMPLE_TYPE_ID;
 
-    @PostConstruct
-    public void InitializeGlobalVariables() {
+    public AnalyzerResultsController(TypeOfSampleService typeOfSampleService) {
+        this.typeOfSampleService = typeOfSampleService;
+
         if (IS_RETROCI) {
             TypeOfSample typeOfSample = new TypeOfSample();
             typeOfSample.setDescription("DBS");
@@ -174,7 +184,7 @@ public class AnalyzerResultsController extends BaseController {
             BindingResult result, HttpServletRequest request)
             throws IllegalAccessException, InvocationTargetException, NoSuchMethodException {
         AnalyzerResultsForm form = new AnalyzerResultsForm();
-        
+
         request.getSession().setAttribute(SAVE_DISABLED, TRUE);
 
         String requestAnalyzerType = null;
@@ -183,6 +193,13 @@ public class AnalyzerResultsController extends BaseController {
         }
 
         form.setType(requestAnalyzerType);
+
+        AnalyzerImporterPlugin analyzerPlugin = pluginAnalyzerService.getPluginByAnalyzerId(
+                AnalyzerTestNameCache.getInstance().getAnalyzerIdForName(getAnalyzerNameFromRequest()));
+        if (analyzerPlugin instanceof BidirectionalAnalyzer) {
+            BidirectionalAnalyzer bidirectionalAnalyzer = (BidirectionalAnalyzer) analyzerPlugin;
+            form.setSupportedLISActions(bidirectionalAnalyzer.getSupportedLISActions());
+        }
 
         AnalyzerResultsPaging paging = new AnalyzerResultsPaging();
         List<AnalyzerResults> analyzerResultsList = getAnalyzerResults();
@@ -194,10 +211,10 @@ public class AnalyzerResultsController extends BaseController {
                 paging.setEmptyPageBean(request, form);
 
             } else {
-                paging.setDatabaseResults(request, form,  getAnalyzerResultItemList(analyzerResultsList , form));
+                paging.setDatabaseResults(request, form, getAnalyzerResultItemList(analyzerResultsList, form));
             }
         } else {
-            paging.setDatabaseResults(request, form, getAnalyzerResultItemList(analyzerResultsList , form));
+            paging.setDatabaseResults(request, form, getAnalyzerResultItemList(analyzerResultsList, form));
             paging.page(request, form, Integer.parseInt(request.getParameter("page")));
         }
 
@@ -205,13 +222,60 @@ public class AnalyzerResultsController extends BaseController {
         return findForward(FWD_SUCCESS, form);
     }
 
-    private List<AnalyzerResultItem> getAnalyzerResultItemList(List<AnalyzerResults> analyzerResultsList ,AnalyzerResultsForm form){
+    @RequestMapping(value = "/rest/AnalyzerResults", produces = MediaType.APPLICATION_JSON_VALUE, method = RequestMethod.GET)
+    @ResponseBody
+    public AnalyzerResultsForm showRestAnalyzerResults(@RequestParam(required = false) String type,
+            HttpServletRequest request)
+            throws IllegalAccessException, InvocationTargetException, NoSuchMethodException {
+        AnalyzerResultsForm form = new AnalyzerResultsForm();
+
+        request.getSession().setAttribute(SAVE_DISABLED, TRUE);
+
+        form.setType(type);
+        if (GenericValidator.isBlankOrNull(type)) {
+            return form;
+        }
+        List<AnalyzerResults> analyzerResultsList = new ArrayList<>();
+        try {
+            AnalyzerImporterPlugin analyzerPlugin = pluginAnalyzerService.getPluginByAnalyzerId(
+                    AnalyzerTestNameCache.getInstance().getAnalyzerIdForName(getAnalyzerNameFromRequest()));
+            if (analyzerPlugin instanceof BidirectionalAnalyzer) {
+                BidirectionalAnalyzer bidirectionalAnalyzer = (BidirectionalAnalyzer) analyzerPlugin;
+                form.setSupportedLISActions(bidirectionalAnalyzer.getSupportedLISActions());
+            }
+            analyzerResultsList = getAnalyzerResults();
+        } catch (Exception e) {
+            return form;
+        }
+
+        AnalyzerResultsPaging paging = new AnalyzerResultsPaging();
+        if (GenericValidator.isBlankOrNull(request.getParameter("page"))) {
+            // get list of AnalyzerData from table based on analyzer type
+            if (analyzerResultsList.isEmpty()) {
+                form.setResultList(new ArrayList<AnalyzerResultItem>());
+                form.setDisplayNotFoundMsg(true);
+                paging.setEmptyPageBean(request, form);
+
+            } else {
+                paging.setDatabaseResults(request, form, getAnalyzerResultItemList(analyzerResultsList, form));
+            }
+        } else {
+            paging.setDatabaseResults(request, form, getAnalyzerResultItemList(analyzerResultsList, form));
+            paging.page(request, form, Integer.parseInt(request.getParameter("page")));
+        }
+
+        addFlashMsgsToRequest(request);
+        return form;
+    }
+
+    private List<AnalyzerResultItem> getAnalyzerResultItemList(List<AnalyzerResults> analyzerResultsList,
+            AnalyzerResultsForm form) {
         /*
-        * The problem we are solving is that the accession numbers may not be
-        * consecutive but we still want to maintain the order So we will form the
-        * groups (by analyzer runs) by going in order but if the accession number is in
-        * another group it will be boosted to the first group
-        */
+         * The problem we are solving is that the accession numbers may not be
+         * consecutive but we still want to maintain the order So we will form the
+         * groups (by analyzer runs) by going in order but if the accession number is in
+         * another group it will be boosted to the first group
+         */
         boolean missingTest = false;
         resolveMissingTests(analyzerResultsList);
         List<AnalyzerResultItem> analyzerResultItemList = new ArrayList<>();
@@ -250,8 +314,8 @@ public class AnalyzerResultsController extends BaseController {
             }
         }
 
-        form.setDisplayMissingTestMsg(new Boolean(missingTest));
-        return analyzerResultItemList;  
+        form.setDisplayMissingTestMsg(Boolean.valueOf(missingTest));
+        return analyzerResultItemList;
     }
 
     private void setNonConformityStateForResultItem(AnalyzerResultItem resultItem) {
@@ -271,28 +335,18 @@ public class AnalyzerResultsController extends BaseController {
                 // If there is a nonconforming sample item then we need to check if it is the
                 // one for this
                 // test if it is then it is nonconforming if not then it is not nonconforming
-                if (!nonConformingSampleItems.isEmpty()) {
-                    TypeOfSampleTest typeOfSample = sampleTypeTestService
-                            .getTypeOfSampleTestForTest(resultItem.getTestId());
-                    if (typeOfSample != null) {
-                        String sampleTypeId = typeOfSample.getTypeOfSampleId();
-                        nonconforming = false;
-                        for (SampleItem sampleItem : nonConformingSampleItems) {
-                            if (sampleTypeId.equals(sampleItem.getTypeOfSample().getId())) {
-                                nonconforming = true;
-                                break;
-                            }
-                        }
-
+                TypeOfSample sampleType = analysisService
+                        .getTypeOfSample(analysisService.get(resultItem.getAnalysisId()));
+                nonconforming = false;
+                for (SampleItem nonConformingSampleItem : nonConformingSampleItems) {
+                    if (sampleType.getId().equals(nonConformingSampleItem.getTypeOfSample().getId())) {
+                        nonconforming = true;
+                        break;
                     }
                 }
-
             }
-
         }
-
         resultItem.setNonconforming(nonconforming);
-
     }
 
     private List<List<AnalyzerResultItem>> groupAnalyzerResults(List<AnalyzerResults> analyzerResultsList) {
@@ -346,7 +400,6 @@ public class AnalyzerResultsController extends BaseController {
 
             analyzerResultsService.updateAll(resolvedResults);
         }
-
     }
 
     private List<AnalyzerResults> getAnalyzerResults() {
@@ -470,7 +523,8 @@ public class AnalyzerResultsController extends BaseController {
                     } else {
                         // find if the sibling reflex is satisfied
                         TestReflex sibTestReflex = testReflexService.get(possibleTestReflex.getSiblingReflexId());
-//                        TestResult sibTestResult = testResultService.get(sibTestReflex.getTestResultId());
+                        // TestResult sibTestResult =
+                        // testResultService.get(sibTestReflex.getTestResultId());
 
                         for (Analysis analysis : analysisList) {
                             List<Result> resultList = resultService.getResultsByAnalysis(analysis);
@@ -561,7 +615,6 @@ public class AnalyzerResultsController extends BaseController {
         TestResult testResult = testResults.get(0);
 
         return testResult.getSignificantDigits();
-
     }
 
     private String getRoundedToSignificantDigits(AnalyzerResults result) {
@@ -586,12 +639,8 @@ public class AnalyzerResultsController extends BaseController {
                 return result.getResult();
             }
 
-            if (significantDigits == 0) {
-                return String.valueOf(Math.round(results));
-            }
-
-            double power = Math.pow(10, significantDigits);
-            return String.valueOf(Math.round(results * power) / power);
+            // not truly significant digits, just decimal places
+            return StringUtil.doubleWithSignificantDigits(results, significantDigits);
         } else {
             return result.getResult();
         }
@@ -664,6 +713,41 @@ public class AnalyzerResultsController extends BaseController {
         return sampleQaEventService.getSampleQaEventsBySample(sample);
     }
 
+    @RequestMapping(value = "/rest/AnalyzerResults", method = RequestMethod.POST)
+    @ResponseBody
+    public void showRestAnalyzerResultsSave(HttpServletRequest request, @Validated({ Paging.class,
+            AnalyzerResultsForm.AnalyzerResuts.class }) @RequestBody AnalyzerResultsForm form) {
+
+        AnalyzerResultsPaging paging = new AnalyzerResultsPaging();
+        paging.updatePagedResults(request, form);
+        List<AnalyzerResultItem> resultItemList = paging.getResults(request);
+
+        List<AnalyzerResultItem> actionableResults = extractActionableResult(resultItemList);
+
+        if (actionableResults.isEmpty()) {
+            return;
+        }
+
+        List<SampleGrouping> sampleGroupList = new ArrayList<>();
+
+        resultItemList.removeAll(actionableResults);
+        List<AnalyzerResultItem> childlessControls = extractChildlessControls(resultItemList);
+        List<AnalyzerResults> deletableAnalyzerResults = getRemovableAnalyzerResults(actionableResults,
+                childlessControls);
+
+        createResultsFromItems(actionableResults, sampleGroupList);
+
+        try {
+            analyzerResultsService.persistAnalyzerResults(deletableAnalyzerResults, sampleGroupList,
+                    getSysUserId(request));
+
+        } catch (LIMSRuntimeException e) {
+            LogEvent.logError(e.getMessage(), e);
+
+        }
+
+    }
+
     @RequestMapping(value = "/AnalyzerResults", method = RequestMethod.POST)
     public ModelAndView showAnalyzerResultsSave(HttpServletRequest request,
             @ModelAttribute("form") @Validated({ Paging.class,
@@ -715,15 +799,17 @@ public class AnalyzerResultsController extends BaseController {
         }
 
         redirectAttibutes.addFlashAttribute(FWD_SUCCESS, true);
-        if (GenericValidator.isBlankOrNull(form.getType())) {
-            return findForward(FWD_SUCCESS_INSERT, form);
-        } else {
-            Map<String, String> params = new HashMap<>();
-            params.put("type", form.getType());
-           // params.put("page", form.getPaging().getCurrentPage());
-            params.put("forward", FWD_SUCCESS_INSERT);
-            return getForwardWithParameters(findForward(FWD_SUCCESS_INSERT, form), params);
-        }
+        return findForward(FWD_SUCCESS_INSERT, form);
+        // if (GenericValidator.isBlankOrNull(form.getType())) {
+        // return findForward(FWD_SUCCESS_INSERT, form);
+        // } else {
+        // Map<String, String> params = new HashMap<>();
+        // params.put("type", form.getType());
+        // // params.put("page", form.getPaging().getCurrentPage());
+        // params.put("forward", FWD_SUCCESS_INSERT);
+        // return getForwardWithParameters(findForward(FWD_SUCCESS_INSERT, form),
+        // params);
+        // }
     }
 
     private Errors validateSavableItems(List<AnalyzerResultItem> savableResults, Errors errors) {
@@ -774,7 +860,6 @@ public class AnalyzerResultsController extends BaseController {
             if (!analyzerResultItem.isReadOnly()) {
                 groupedResultList.add(analyzerResultItem);
             }
-
         }
 
         // for the last set of results the grouping number will not change
@@ -785,7 +870,6 @@ public class AnalyzerResultsController extends BaseController {
             sampleGrouping.triggersToSelectedReflexesMap = new HashMap<>();
             sampleGroupList.add(sampleGrouping);
         }
-
     }
 
     private SampleGrouping createRecordsForNewResult(List<AnalyzerResultItem> groupedAnalyzerResultItems) {
@@ -829,7 +913,6 @@ public class AnalyzerResultsController extends BaseController {
 
         // This last case is that non-conformity may have been done
         return sampleService.getSampleByAccessionNumber(accessionNumber) == null;
-
     }
 
     /*
@@ -876,9 +959,10 @@ public class AnalyzerResultsController extends BaseController {
     protected SampleItem getOrCreateSampleItem(List<AnalyzerResultItem> groupedAnalyzerResultItems, Sample sample) {
         List<Analysis> dBAnalysisList = analysisService.getAnalysesBySampleId(sample.getId());
 
-        TypeOfSampleTest typeOfSampleForNewTest = typeOfSampleTestService
-                .getTypeOfSampleTestForTest(groupedAnalyzerResultItems.get(0).getTestId());
-        String typeOfSampleId = typeOfSampleForNewTest.getTypeOfSampleId();
+        List<TypeOfSampleTest> typeOfSampleForNewTest = typeOfSampleTestService
+                .getTypeOfSampleTestsForTest(groupedAnalyzerResultItems.get(0).getTestId());
+        List<String> typeOfSampleIds = typeOfSampleForNewTest.stream().map(e -> e.getTypeOfSampleId())
+                .collect(Collectors.toList());
 
         SampleItem sampleItem = null;
         int maxSampleItemSortOrder = 0;
@@ -888,7 +972,7 @@ public class AnalyzerResultsController extends BaseController {
                 maxSampleItemSortOrder = Math.max(maxSampleItemSortOrder,
                         Integer.parseInt(dbAnalysis.getSampleItem().getSortOrder()));
             }
-            if (typeOfSampleId.equals(dbAnalysis.getSampleItem().getTypeOfSampleId())) {
+            if (typeOfSampleIds.contains(dbAnalysis.getSampleItem().getTypeOfSampleId())) {
                 sampleItem = dbAnalysis.getSampleItem();
                 break;
             }
@@ -901,7 +985,7 @@ public class AnalyzerResultsController extends BaseController {
             sampleItem.setSysUserId(getSysUserId(request));
             sampleItem.setSortOrder(Integer.toString(maxSampleItemSortOrder + 1));
             sampleItem.setStatusId(SpringContext.getBean(IStatusService.class).getStatusID(SampleStatus.Entered));
-            TypeOfSample typeOfSample = typeOfSampleService.get(typeOfSampleId);
+            TypeOfSample typeOfSample = typeOfSampleService.get(typeOfSampleIds.get(0));
             sampleItem.setTypeOfSample(typeOfSample);
         }
         return sampleItem;
@@ -989,14 +1073,15 @@ public class AnalyzerResultsController extends BaseController {
                 Test test = testService.get(resultItem.getTestId());
                 analysis.setTest(test);
                 // A new sampleItem may be needed
-                TypeOfSample typeOfSample = SpringContext.getBean(TypeOfSampleService.class)
+                List<TypeOfSample> typeOfSamples = SpringContext.getBean(TypeOfSampleService.class)
                         .getTypeOfSampleForTest(test.getId());
                 List<SampleItem> sampleItemsForSample = sampleItemService.getSampleItemsBySampleId(sample.getId());
 
                 // if the type of sample is found then assign to analysis
                 // otherwise create it and assign
                 for (SampleItem item : sampleItemsForSample) {
-                    if (item.getTypeOfSample().getId().equals(typeOfSample.getId())) {
+                    if (typeOfSamples.stream().map(e -> e.getId()).collect(Collectors.toList())
+                            .contains(item.getTypeOfSample().getId())) {
                         sampleItem = item;
                         analysis.setSampleItem(sampleItem);
                     }
@@ -1008,7 +1093,7 @@ public class AnalyzerResultsController extends BaseController {
                     sampleItem
                             .setStatusId(SpringContext.getBean(IStatusService.class).getStatusID(SampleStatus.Entered));
                     sampleItem.setCollectionDate(DateUtil.getNowAsTimestamp());
-                    sampleItem.setTypeOfSample(typeOfSample);
+                    sampleItem.setTypeOfSample(typeOfSamples.get(0));
                     analysis.setSampleItem(sampleItem);
                 }
             } else {
@@ -1119,12 +1204,10 @@ public class AnalyzerResultsController extends BaseController {
                     return DBS_SAMPLE_TYPE_ID;
                 }
             }
-
         }
 
         return typeOfSampleTestService.getTypeOfSampleTestsForTest(analysisList.get(0).getTest().getId()).get(0)
                 .getTypeOfSampleId();
-
     }
 
     private void createAndAddItems_Analysis_Results(List<AnalyzerResultItem> groupedAnalyzerResultItems,
@@ -1270,7 +1353,6 @@ public class AnalyzerResultsController extends BaseController {
             analysis.setIsReportable(test.getIsReportable());
             analysis.setRevision("0");
         }
-
     }
 
     private List<AnalyzerResults> getRemovableAnalyzerResults(List<AnalyzerResultItem> actionableResults,
@@ -1343,7 +1425,7 @@ public class AnalyzerResultsController extends BaseController {
         List<AnalyzerResultItem> childLessControlList = new ArrayList<>();
         int sampleGroupingNumber = 0;
         boolean lastGroupIsControl = false;
-        boolean inControlGroup = true;// covers the bottom control has no
+        boolean inControlGroup = true; // covers the bottom control has no
         // children
 
         for (int i = resultItemList.size() - 1; i >= 0; i--) {
@@ -1370,7 +1452,7 @@ public class AnalyzerResultsController extends BaseController {
         } else if (FWD_FAIL.equals(forward)) {
             return "homePageDefinition";
         } else if (FWD_SUCCESS_INSERT.equals(forward)) {
-           return redirectInsertSuccess();
+            return redirectInsertSuccess();
         } else if (FWD_FAIL_INSERT.equals(forward)) {
             return "analyzerResultsDefinition";
         } else if (FWD_VALIDATION_ERROR.equals(forward)) {
@@ -1404,7 +1486,6 @@ public class AnalyzerResultsController extends BaseController {
                     .getKeyForAction("/AnalyzerResults?type=" + request.getParameter("type"));
         }
         return key;
-
     }
 
     public class SampleGrouping {
@@ -1422,6 +1503,5 @@ public class AnalyzerResultsController extends BaseController {
         public boolean updateSample = false;
         public boolean addSampleItem = false;
         public Map<Result, String> resultToUserserSelectionMap;
-
     }
 }
